--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,6 +14,9 @@ spring:
     console:
       enabled: true
       path: /h2
+      settings:
+       web-allow-others: true
+       trace: true
     url: jdbc:h2:~/H2Data/cboard;AUTO_SERVER=TRUE;LOG=0;UNDO_LOG=0
     user:
       name: sa
